change compose yaml to correct tag

--- a/ezpztv_threadfin/docker-compose.yaml
+++ b/ezpztv_threadfin/docker-compose.yaml
@@ -1,7 +1,7 @@
 services:
   ezpztv:
     container_name: ezpztv
-    image: xaque87/ezpztv:latest
+    image: xaque87/ezpztv:threadfin
     env_file:
       - ./ezpztv.env
     volumes:
