Added bypass_header env variable to skip url header checks before downloading urls

--- a/ezpztv/ezpztv.env
+++ b/ezpztv/ezpztv.env
@@ -5,7 +5,7 @@ M3U_URL=""
 EPG_URL=""
 USER_NAME=ezpztv
 PASSWORD=vtzpze
-LIVE_TV=False
+LIVE_TV=True
 UNSORTED=False
 REFRESH_LIB=False
 CLEAN_SYNC=False
@@ -14,3 +14,4 @@ REMOVE_TERMS=
 REPLACE_TERMS=
 CLEANERS=
 APK=
+BYPASS_HEADER=
