Added bypass_header env variable to skip url header checks before downloading urls

--- a/m3uparser/m3uparser.env
+++ b/m3uparser/m3uparser.env
@@ -9,9 +9,10 @@ M3U_URL=""
 # REMOVE_TERMS=
 # REPLACE_TERMS=
 # CLEANERS=
-LIVE_TV=False
+LIVE_TV=True
 UNSORTED=False
 CLEAN_SYNC=False
+BYPASS_HEADER=
 ########################
 # JELLYFIN INTEGRATION #
 ########################
