Added exclude filter and general clean up

--- a/m3uparser/m3uparser.env
+++ b/m3uparser/m3uparser.env
@@ -5,9 +5,10 @@ PUID=1000
 PGID=1000
 HOURS=8
 M3U_URL=""
-# SCRUB_HEADER=
-# REMOVE_TERMS=
-# REPLACE_TERMS=
+# SCRUB_HEADER=""
+# EXCLUDE_TERMS=""
+# REMOVE_TERMS=""
+# REPLACE_TERMS=""
 # CLEANERS=
 LIVE_TV=True
 UNSORTED=False
