Add github workflow to auto build/push to dockerhub

--- a/.github/workflows/docker-image.yaml
+++ b/.github/workflows/docker-image.yaml
@@ -2,6 +2,8 @@ name: Build and Push Docker Image
 
 on:
   push:
+    branches:
+      - '**'
     branches-ignore:
       - '**/exclude-*'
   pull_request:
