Add github workflow to auto build/push to dockerhub

--- a/.github/workflows/docker-image.yaml
+++ b/.github/workflows/docker-image.yaml
@@ -3,9 +3,9 @@ name: Build and Push Docker Image
 on:
   push:
     branches:
-      - '**'
-    branches-ignore:
-      - '**/exclude-*'
+      - 'main'
+      - 'ezpztv'
+      - 'ezpztv_threadfin'
   pull_request:
     branches-ignore:
       - '**/exclude-*'
